:bug: Fixes query controls on mobile

--- a/src/styles/TeacherPage/QueryControls-TeacherPage.scss
+++ b/src/styles/TeacherPage/QueryControls-TeacherPage.scss
@@ -6,7 +6,6 @@
     }
     @media only screen and (min-width: 1000px) {
         flex-direction: row;
-
     }
 
     width: 100%;
@@ -42,7 +41,12 @@
         padding: 4px;
         margin: 0.3rem 1rem 0 1rem;
 
-        width: 15%;
+        @media only screen and (min-width: 200px) {
+            width: 20rem;
+        }
+        @media only screen and (min-width: 1000px) {
+            width: 18rem;
+        }
 
         border: none;
         border-radius: 10px;
